# RTIC-Template-for-ESP32C3

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
